# csvcubed-pmd

./: .gitignore  Dockerfile  Jenkinsfile  README.md  pyproject.toml  sonar-project.properties  windows-testing-setup.ps1
.devcontainer/: devcontainer.json
.github/workflows/: dev.yaml  main-push.yaml  pull-request.yaml  release.yaml  reusable-build  reusable-deploy  reusable-deploy.yaml  reusable-test  reusable-test.yaml
deploydocker/: Dockerfile  docker-compose.yml  entrypoint.sh
src/csvcubedpmd/csvwcli/: __init__.py  findwhere.py  pull.py
src/csvcubedpmd/dcatcli/: pmdify.py
src/csvcubedpmd/models/rdf/: pmdcat.py
src/csvcubedpmd/utils/: rmbrokenchar.py  sparql.py
tests/features/: csvwcommandline.feature  dcatcommandline.feature  uri.feature
tests/features/steps/: pmdutils.py
tests/test-cases/dcatcli/: 4g-coverage-v0-4-10.csv-metadata.json  4g-coverage-v0-5-1.csv-metadata.json  area-name.csv-metadata.json  geography-type.csv-metadata.json  markdown_testing.csv  markdown_testing.csv-metadata.json  month.csv-metadata.json  ons-geography-code.csv-metadata.json  single-measure-bulletin-dist.csv-metadata.json  single-measure-bulletin.csv  single-measure-bulletin.csv-metadata.json
tests/test-cases/dependencies/: entrant.csv-metadata.json  language.csv-metadata.json  song.csv-metadata.json  sweden-at-eurovision-complete-dataset.csv-metadata.json  year.csv-metadata.json  year.table.json
tests/unit/: conftest.py
tests/unit/csvwcli/: test_pull.py  test_urireplace.py
tests/unit/dcatcli/: test_pmdify.py
(+6 files in other folders)
