[tool.poetry]
authors = ["Integrated Data Service - Dissemination <csvcubed@gsscogs.uk>"]
description = "Provides functionality necessary to transform RDF Data Cube style CSV-Ws into a format compatible with the Publish My Data platform. Part of the csvcubed family."
exclude = ["docs/*"]
license = "Apache-2.0"
name = "csvcubed-pmd"
packages = [
  {include = "csvcubedpmd", from = "src"},
]
readme = "README.md"
version = "1.0.14-rc"

[tool.poetry.dependencies]
csvw = "*"
pandas = "*"
pyparsing = "~=2.4.7"
python = ">=3.9,<3.12"
rdflib = "*"
requests = "*"
unidecode = "*"
uritemplate = "*"
chardet = "^4.0.0"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
csvcubed-devtools = "0.2.0"
csvcubed=">=0.4.10"
pytest-recording = "^0.12.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pyright]
exclude = [
  ".venv",
  "**/tests",
  "**/.tox",
]
pythonVersion = "3.11"

[tool.poetry.scripts]
pmdutils = 'csvcubedpmd.main:entry_point'